modal shadow visibility fix

--- a/src/components/NewTodoModal/style.module.scss
+++ b/src/components/NewTodoModal/style.module.scss
@@ -2,7 +2,7 @@
     width: 364px;
     height: 211px;
     background: #ffffff;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
     border-radius: 8px;
     text-align: center;
 
